[project]
name = "pyside6-stubs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "moreih29", email = "moreih29@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
